# cialdnb

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  run_cialdnb.py  scrapy.cfg  websites.txt
cialdnb/: customexport.py  middlewares.py  pipelines.py  settings.py  utils.py
cialdnb/items/: items.py  listing_item_loader.py
cialdnb/spiders/: cialdnb.py
