[tool.poetry]
name = "cialdnb"
version = "0.1.0"
description = ""
authors = ["Wesley Mendes <wesley_gto_x@yahoo.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.6.1"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
black = "^22.6.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-flake8 = "^1.1.1"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
